# metabuild-rec-platform

./: LICENSE  README.md  package-lock.json  package.json
PlatformDao/: .gitignore
PlatformDao/contract/: Cargo.toml
PlatformDao/contract/src/: lib.rs
energy_pool_contract/: Cargo.toml
energy_pool_contract/neardev/: dev-account  dev-account.env
energy_pool_contract/src/: lib.rs
energydao/: package-lock.json  package.json
energydao/contract/: Cargo.toml
energydao/contract/src/: lib.rs
fractose-contracts-v1/: demo.sh  demo.txt
fractose-contracts-v1/contract/: Cargo.toml
fractose-contracts-v1/contract/src/: lib.rs
fractose-contracts-v1/neardev/: dev-account  dev-account.env
fractose-contracts-v1/shares/neardev/: dev-account  dev-account.env
fractose-contracts-v1/shares/res/: nft_shares.wasm  shares.wasm
fractose-contracts-v1/shares/src/: lib.rs
organisationdao/contract/: Cargo.toml
organisationdao/contract/src/: lib.rs
rewardscontraclatest/: Cargo.toml
rewardscontraclatest/src/: lib.rs
staking/: package-lock.json  package.json
staking/contract/: Cargo.toml
staking/contract/src/: lib.rs
stakingpool/: package-lock.json  package.json
stakingpool/contract/: Cargo.toml
stakingpool/contract/src/: lib.rs
treasurydao/: package-lock.json  package.json
treasurydao/contract/: Cargo.toml
treasurydao/contract/src/: lib.rs
vesting/: Cargo.toml
vesting/neardev/: dev-account  dev-account.env
vesting/src/: lib.rs
